use exec to gracefully shut down the django app when the container stops

--- a/kustomize/deployment.yaml
+++ b/kustomize/deployment.yaml
@@ -62,6 +62,7 @@ spec:
         - name: parladata
           image: parladata
           command:
+            - exec
             - gunicorn
             - parladata_project.wsgi:application
             - -b
