--- a/kustomize/deployment.yaml
+++ b/kustomize/deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: parladata-deployment
+  name: parladata-slovenija-deployment
   labels:
-    app: parladata
+    app: parladata-slovenija
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: parladata
+      app: parladata-slovenija
   template:
     metadata:
       labels:
-        app: parladata
+        app: parladata-slovenija
     spec:
       initContainers:
         - name: collectstatic
-          image: parladata
+          image: parladata-slovenija
           command:
             - python
             - manage.py
@@ -27,9 +27,9 @@ spec:
               value: parladata_project.settings.k8s
           envFrom:
             - secretRef:
-                name: parladata-credentials
+                name: parladata-slovenija-credentials
             - secretRef:
-                name: parladata-sentry
+                name: parladata-slovenija-sentry
           resources:
             requests:
               memory: 200Mi
@@ -38,7 +38,7 @@ spec:
               memory: 200Mi
               cpu: 200m
         - name: migrate
-          image: parladata
+          image: parladata-slovenija
           command:
             - python
             - manage.py
@@ -48,9 +48,9 @@ spec:
               value: parladata_project.settings.k8s
           envFrom:
             - secretRef:
-                name: parladata-credentials
+                name: parladata-slovenija-credentials
             - secretRef:
-                name: parladata-sentry
+                name: parladata-slovenija-sentry
           resources:
             requests:
               memory: 200Mi
@@ -59,8 +59,8 @@ spec:
               memory: 200Mi
               cpu: 200m
       containers:
-        - name: parladata
-          image: parladata
+        - name: parladata-slovenija
+          image: parladata-slovenija
           command:
             - gunicorn
             - parladata_project.wsgi:application
@@ -78,9 +78,9 @@ spec:
             - containerPort: 8000
           envFrom:
               - secretRef:
-                  name: parladata-credentials
+                  name: parladata-slovenija-credentials
               - secretRef:
-                  name: parladata-sentry
+                  name: parladata-slovenija-sentry
           env:
             - name: DJANGO_SETTINGS_MODULE
               value: parladata_project.settings.k8s
