--- a/kustomize/secrets.yaml.example
+++ b/kustomize/secrets.yaml.example
@@ -13,11 +13,9 @@ stringData:
   DJANGO_DATABASE_NAME: "parladata"
   DJANGO_DATABASE_USERNAME: "parlauser"
   DJANGO_DATABASE_PASSWORD: "parlapassword!"
-  # removed because of S3
-  # DJANGO_STATIC_ROOT: "/pvc/static"
-  # DJANGO_STATIC_URL_BASE: "https://files.parladata.lb.djnd.si/static/"
-  # DJANGO_MEDIA_ROOT: "/pvc/media"
-  # DJANGO_MEDIA_URL_BASE: "https://files.parladata.lb.djnd.si/media/"
+  # pvc for static files
+  DJANGO_STATIC_ROOT: "/pvc/static"
+  DJANGO_STATIC_URL_BASE: "https://files.parladata.lb.djnd.si/static/"
   DJANGO_BASE_URL: ""
   PARLAMETER_SOLR_URL: "http://parlasolr.lb.djnd.si/solr/parlasearch"
   # EMAIL
@@ -30,7 +28,7 @@ stringData:
   PARLAMETER_SMTP_USER: ""
   PARLAMETER_SMTP_PASSWORD: ""
   PARLAMETER_FROM_EMAIL: ""
-  # S3 storage
+  # S3 storage for media files
   PARLAMETER_ENABLE_S3: "yes"
   PARLAMETER_AWS_ACCESS_KEY_ID: ""
   PARLAMETER_AWS_SECRET_ACCESS_KEY: ""
