--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,7 @@ name: Publish Docker image
 on:
   push:
     branches:
-      - 'k8s'
+      - 'bih'
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
@@ -25,14 +25,14 @@ jobs:
           username: nologin
           password: ${{ secrets.SCW_SECRET_TOKEN }}
       -
-        name: Build and push PARLADATA
+        name: Build and push parladata-bosna
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
           tags: |
-            rg.fr-par.scw.cloud/djnd/parladata:${{ github.sha }}
-            rg.fr-par.scw.cloud/djnd/parladata:latest
+            rg.fr-par.scw.cloud/djnd/parladata-bosna:${{ github.sha }}
+            rg.fr-par.scw.cloud/djnd/parladata-bosna:latest
       -
         name: Update image versions in kustomize/kustomization.yaml
         run: |
