--- a/kustomize/ingress.yaml
+++ b/kustomize/ingress.yaml
@@ -1,33 +1,33 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: parladata
+  name: parladata-bosna
   annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-production"
+    cert-manager.io/cluster-issuer: "letsencrypt-sandbox"
     nginx.ingress.kubernetes.io/proxy-body-size: 10m
 spec:
   tls:
     - hosts:
-        - parladata.lb.djnd.si
-      secretName: parladata-tls
+        - parladata-bih.lb.djnd.si
+      secretName: parladata-bosna-tls
   rules:
-    - host: parladata.lb.djnd.si
+    - host: parladata-bih.lb.djnd.si
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: parladata
+                name: parladata-bosna
                 port:
                   number: 8000
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: parladata-nginx
+  name: parladata-bosna-nginx
   annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-production"
+    cert-manager.io/cluster-issuer: "letsencrypt-sandbox"
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
     nginx.ingress.kubernetes.io/cors-allow-origin: "*" # TODO
@@ -36,16 +36,16 @@ metadata:
 spec:
   tls:
     - hosts:
-        - files.parladata.lb.djnd.si
-      secretName: parladata-nginx-tls
+        - files.parladata-bih.lb.djnd.si
+      secretName: parladata-bosna-nginx-tls
   rules:
-    - host: files.parladata.lb.djnd.si
+    - host: files.parladata-bih.lb.djnd.si
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: parladata-nginx
+                name: parladata-bosna-nginx
                 port:
                   number: 80
