--- a/kustomize/kustomization.yaml
+++ b/kustomize/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: parlameter
+namespace: parlameter-bosna
 resources:
   # - statefulset.yaml
   - deployment.yaml
@@ -8,8 +8,8 @@ resources:
   - ingress.yaml
 
   # uncomment cronjob to enable it
-  #- cronjobs/task_runner_cronjob.yaml
+  - cronjobs/task_runner_cronjob.yaml
 images:
-  - name: parladata
-    newName: rg.fr-par.scw.cloud/djnd/parladata
+  - name: parladata-bosna
+    newName: rg.fr-par.scw.cloud/djnd/parladata-bosna
     newTag: '599fdfecb3214afd8183d615fe83018892e643cc'
