--- a/kustomize/service.yaml
+++ b/kustomize/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: parladata
+  name: parladata-bosna
 spec:
   selector:
-    app: parladata
+    app: parladata-bosna
   ports:
     - protocol: TCP
       port: 8000
@@ -13,10 +13,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: parladata-nginx
+  name: parladata-bosna-nginx
 spec:
   selector:
-    app: parladata
+    app: parladata-bosna
   ports:
     - protocol: TCP
       port: 80
