--- a/kustomize/solr.yaml
+++ b/kustomize/solr.yaml
@@ -124,27 +124,27 @@ spec:
 # If you do uncomment this, make sure you set
 # the nginx.ingress.kubernetes.io/whitelist-source-range
 # annotation.
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: parlasolr
-  annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-production"
-    nginx.ingress.kubernetes.io/rewrite-target: /
-    # nginx.ingress.kubernetes.io/whitelist-source-range: "91.236.1.211"
-spec:
-  tls:
-    - hosts:
-        - bosna.parlasolr.lb.djnd.si
-      secretName: bosna-parlasolr-tls
-  rules:
-  - host: bosna.parlasolr.lb.djnd.si
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: parlasolr
-            port:
-              number: 8983
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: parlasolr
+#   annotations:
+#     cert-manager.io/cluster-issuer: "letsencrypt-production"
+#     nginx.ingress.kubernetes.io/rewrite-target: /
+#     # nginx.ingress.kubernetes.io/whitelist-source-range: "91.236.1.211"
+# spec:
+#   tls:
+#     - hosts:
+#         - bosna.parlasolr.lb.djnd.si
+#       secretName: bosna-parlasolr-tls
+#   rules:
+#   - host: bosna.parlasolr.lb.djnd.si
+#     http:
+#       paths:
+#       - path: /
+#         pathType: Prefix
+#         backend:
+#           service:
+#             name: parlasolr
+#             port:
+#               number: 8983
