--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -50,3 +50,10 @@ jobs:
         destination_branch: "slovenija"
         github_token: ${{ secrets.GITHUB_TOKEN }}
         pr_title: "Pulling ${{ github.ref }} into slovenija"
+
+    - name: pull-request-bih
+      uses: repo-sync/pull-request@v2
+      with:
+        destination_branch: "bih"
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        pr_title: "Pulling ${{ github.ref }} into bih"
