--- a/kustomize/deployment.yaml
+++ b/kustomize/deployment.yaml
@@ -31,6 +31,10 @@ spec:
           env:
             - name: DJANGO_SETTINGS_MODULE
               value: parladata_project.settings.k8s
+            - name: DJANGO_STATIC_ROOT
+              value: "/pvc/static"
+            - name: DJANGO_STATIC_URL_BASE
+              value: "https://files.parladata-lendava.lb.djnd.si/media/"
           envFrom:
             - secretRef:
                 name: parladata-credentials
@@ -95,6 +99,10 @@ spec:
               value: parladata_project.settings.k8s
             - name: LEMMATIZER_LANGUAGE_CODE
               value: sl
+            - name: DJANGO_STATIC_ROOT
+              value: "/pvc/static"
+            - name: DJANGO_STATIC_URL_BASE
+              value: "https://files.parladata-lendava.lb.djnd.si/media/"
           resources:
             requests:
               memory: 400Mi
