--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,7 +25,7 @@ jobs:
           username: nologin
           password: ${{ secrets.SCW_SECRET_TOKEN }}
       -
-        name: Build and push PARLADATA HRASTNIK
+        name: Build and push PARLADATA LENDAVA
         uses: docker/build-push-action@v2
         with:
           context: .
