I am not focused today

--- a/kustomize/deployment.yaml
+++ b/kustomize/deployment.yaml
@@ -102,7 +102,7 @@ spec:
             - name: DJANGO_STATIC_ROOT
               value: "/pvc/static"
             - name: DJANGO_STATIC_URL_BASE
-              value: "https://files.parladata-lendava.lb.djnd.si/media/"
+              value: "https://files.parladata-lendava.lb.djnd.si/static/"
           resources:
             requests:
               memory: 400Mi
