--- a/kustomize/service.yaml
+++ b/kustomize/service.yaml
@@ -9,3 +9,15 @@ spec:
     - protocol: TCP
       port: 8000
       targetPort: 8000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: parladata-nginx
+spec:
+  selector:
+    app: parladata-nginx
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
