add env for static files storage

--- a/kustomize/deployment.yaml
+++ b/kustomize/deployment.yaml
@@ -95,6 +95,10 @@ spec:
               value: parladata_project.settings.k8s
             - name: LEMMATIZER_LANGUAGE_CODE
               value: sl
+            - name: DJANGO_STATIC_ROOT
+              value: "/pvc/static"
+            - name: DJANGO_STATIC_URL_BASE
+              value: "https://files.parladata.lb.djnd.si/static/"
           resources:
             requests:
               memory: 400Mi
