--- a/kustomize/ingress.yaml
+++ b/kustomize/ingress.yaml
@@ -1,27 +1,44 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: parladata-lendava
+  name: parladata
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     nginx.ingress.kubernetes.io/proxy-body-size: 10m
 spec:
   tls:
     - hosts:
-        - parladata-lendava.lb.djnd.si
-        - files.parladata-lendava.lb.djnd.si
+        - parladata.lb.djnd.si
       secretName: parladata-tls
   rules:
-    - host: parladata-lendava.lb.djnd.si
+    - host: parladata.lb.djnd.si
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: parladata-lendava
+                name: parladata
                 port:
                   number: 8000
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: parladata-nginx
+  annotations:
+    cert-manager.io/cluster-issuer: "letsencrypt-production"
+    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "*" # TODO
+    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
+    nginx.ingress.kubernetes.io/proxy-body-size: 10m
+spec:
+  tls:
+    - hosts:
+        - files.parladata-lendava.lb.djnd.si
+      secretName: parladata-nginx-tls
+  rules:
     - host: files.parladata-lendava.lb.djnd.si
       http:
         paths:
