--- a/kustomize/ingress.yaml
+++ b/kustomize/ingress.yaml
@@ -18,7 +18,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: parladata
+                name: parladata-lendava
                 port:
                   number: 8000
 ---
