--- a/kustomize/ingress.yaml
+++ b/kustomize/ingress.yaml
@@ -21,3 +21,31 @@ spec:
                 name: parladata-hrastnik
                 port:
                   number: 8000
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: parladata-hrastnik-nginx
+  annotations:
+    cert-manager.io/cluster-issuer: "letsencrypt-production"
+    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "*" # TODO
+    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
+    nginx.ingress.kubernetes.io/proxy-body-size: 10m
+spec:
+  tls:
+    - hosts:
+        - files.parladata-hrastnik.lb.djnd.si
+      secretName: parladata-hrastnik-nginx-tls
+  rules:
+    - host: files.parladata-hrastnik.lb.djnd.si
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: parladata-hrastnik-nginx
+                port:
+                  number: 80
