fix image name for parlasolr-ua

--- a/kustomize/kustomization.yaml
+++ b/kustomize/kustomization.yaml
@@ -15,6 +15,6 @@ images:
   - name: parladata-ua
     newName: rg.fr-par.scw.cloud/djnd/parladata-ua
     newTag: '2b1c62f1edde983c629830f3e1a72b5ff3952877'
-  - name: parlasolr
-    newName: rg.fr-par.scw.cloud/djnd/parlasolr
+  - name: parlasolr-ua
+    newName: rg.fr-par.scw.cloud/djnd/parlasolr-ua
     newTag: '2b1c62f1edde983c629830f3e1a72b5ff3952877'
