initial croatian deployment

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,8 +31,8 @@ jobs:
           context: .
           push: true
           tags: |
-            rg.fr-par.scw.cloud/djnd/parladata:${{ github.sha }}
-            rg.fr-par.scw.cloud/djnd/parladata:latest
+            rg.fr-par.scw.cloud/djnd/parladata-hrvaska:${{ github.sha }}
+            rg.fr-par.scw.cloud/djnd/parladata-hrvaska:latest
       -
         name: Build and push SOLR
         uses: docker/build-push-action@v2
@@ -40,8 +40,8 @@ jobs:
           context: ./solr
           push: true
           tags: |
-            rg.fr-par.scw.cloud/djnd/parlasolr:${{ github.sha }}
-            rg.fr-par.scw.cloud/djnd/parlasolr:latest
+            rg.fr-par.scw.cloud/djnd/parlasolr-hrvaska:${{ github.sha }}
+            rg.fr-par.scw.cloud/djnd/parlasolr-hrvaska:latest
       -
         name: Update image versions in kustomize/kustomization.yaml
         run: |
