--- a/kustomize/ingress.yaml
+++ b/kustomize/ingress.yaml
@@ -3,16 +3,16 @@ kind: Ingress
 metadata:
   name: parladata
   annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-production"
+    cert-manager.io/cluster-issuer: "letsencrypt-sandbox"
     nginx.ingress.kubernetes.io/proxy-body-size: 10m
 spec:
   ingressClassName: nginx
   tls:
     - hosts:
-        - parladata.lb.djnd.si
+        - parladata-hrvaska.lb.djnd.si
       secretName: parladata-tls
   rules:
-    - host: parladata.lb.djnd.si
+    - host: parladata-hrvaska.lb.djnd.si
       http:
         paths:
           - path: /
@@ -28,7 +28,7 @@ kind: Ingress
 metadata:
   name: parladata-nginx
   annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-production"
+    cert-manager.io/cluster-issuer: "letsencrypt-sandbox"
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
     nginx.ingress.kubernetes.io/cors-allow-origin: "*" # TODO
@@ -38,10 +38,10 @@ spec:
   ingressClassName: nginx
   tls:
     - hosts:
-        - files.parladata.lb.djnd.si
+        - files.parladata-hrvaska.lb.djnd.si
       secretName: parladata-nginx-tls
   rules:
-    - host: files.parladata.lb.djnd.si
+    - host: files.parladata-hrvaska.lb.djnd.si
       http:
         paths:
           - path: /
