--- a/kustomize/kustomization.yaml
+++ b/kustomize/kustomization.yaml
@@ -1,20 +1,21 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: parlameter
+namespace: parlameter-hrvaska
 resources:
   # - statefulset.yaml
   - deployment.yaml
   - service.yaml
   - ingress.yaml
   - pvc.yaml
-  - solr.yaml
+  # TODO  Dont deploy solr bacause in tzhe same namespace is solr from previous instalation Fix this when goes to testing phase
+  # - solr.yaml 
 
   # uncomment cronjob to enable it
-  #- cronjobs/task_runner_cronjob.yaml
+  - cronjobs/task_runner_cronjob.yaml
 images:
-  - name: parladata
-    newName: rg.fr-par.scw.cloud/djnd/parladata
-    newTag: '599fdfecb3214afd8183d615fe83018892e643cc'
-  - name: parlasolr
-    newName: rg.fr-par.scw.cloud/djnd/parlasolr
-    newTag: 'b8e243ad15dba3009e3537b78f41dd56a77fb35b'
+  - name: parladata-hrvaska
+    newName: rg.fr-par.scw.cloud/djnd/parladata-hrvaska
+    newTag: 'latest'
+  - name: parlasolr-hrvaska
+    newName: rg.fr-par.scw.cloud/djnd/parlasolr-hrvaska
+    newTag: 'latest'
