--- a/kustomize/jobs/create_super_user_job.yaml
+++ b/kustomize/jobs/create_super_user_job.yaml
@@ -7,7 +7,7 @@ spec:
     spec:
       containers:
       - name: parladata-create-super-user-job
-        image: rg.fr-par.scw.cloud/djnd/parladata:latest
+        image: rg.fr-par.scw.cloud/djnd/parladata-hrvaska:latest
         env:
           - name: DJANGO_SETTINGS_MODULE
             value: parladata_project.settings.k8s
