--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,7 @@ name: Publish Docker images
 on:
   push:
     branches:
-      - 'k8s'
+      - 'hrvaska'
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
