--- a/kustomize/deployment.yaml
+++ b/kustomize/deployment.yaml
@@ -31,6 +31,10 @@ spec:
           env:
             - name: DJANGO_SETTINGS_MODULE
               value: parladata_project.settings.k8s
+            - name: DJANGO_STATIC_ROOT
+              value: "/pvc/static"
+            - name: DJANGO_STATIC_URL_BASE
+              value: "https://files.parladata-hrvaska.lb.djnd.si/static/"
           envFrom:
             - secretRef:
                 name: parladata-credentials
@@ -104,10 +108,10 @@ spec:
           resources:
             requests:
               memory: 400Mi
-              cpu: 200m
+              cpu: 500m
             limits:
               memory: 400Mi
-              cpu: 200m
+              cpu: 500m
         - name: parladata-nginx
           ports:
             - name: http
