--- a/kustomize/ingress.yaml
+++ b/kustomize/ingress.yaml
@@ -10,9 +10,20 @@ spec:
   tls:
     - hosts:
         - parladata-ajdovscina.lb.djnd.si
+        - data.ajdovscina.parlameter.si
       secretName: parladata-ajdovscina-tls
   rules:
     - host: parladata-ajdovscina.lb.djnd.si
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: parladata-ajdovscina
+                port:
+                  number: 8000
+    - host: data.ajdovscina.parlameter.si
       http:
         paths:
           - path: /
