--- a/kustomize/ingress.yaml
+++ b/kustomize/ingress.yaml
@@ -10,9 +10,20 @@ spec:
   tls:
     - hosts:
         - parladata-lendava.lb.djnd.si
+        - data.lendava.parlameter.si
       secretName: parladata-tls
   rules:
     - host: parladata-lendava.lb.djnd.si
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: parladata-lendava
+                port:
+                  number: 8000
+    - host: data.lendava.parlameter.si
       http:
         paths:
           - path: /
