--- a/kustomize/cronjobs/task_runner_cronjob.yaml
+++ b/kustomize/cronjobs/task_runner_cronjob.yaml
@@ -19,7 +19,7 @@ spec:
                 value: parladata_project.settings.k8s
             envFrom:
               - secretRef:
-                  name: parladata-credentials
+                  name: parladata-slovenija-credentials
             command:
               - python
               - manage.py
