update github workflow action versions

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,5 +1,4 @@
 name: Test parladata
-
 on:
   push:
     branches:
@@ -8,41 +7,38 @@ on:
   pull_request:
     branches:
       - dev
-
 jobs:
   test:
-
+    name: Test parladata
     runs-on: ubuntu-latest
-
     steps:
-      -
-        name: Check out the repo
-        uses: actions/checkout@v2
-      -
-        name: Unzip models
+      - name: Check out the repo
+        uses: actions/checkout@v3
+
+      - name: Unzip models
         run: unzip -o tagger/model.zip -d tagger/
-      -
-        name: Set up PostgreSQL
+
+      - name: Set up PostgreSQL
         uses: harmon758/postgresql-action@v1
         with:
-          postgresql version: 'latest'
-          postgresql db: 'parladata'
+          postgresql version: "latest"
+          postgresql db: "parladata"
           postgresql user: postgres
           postgresql password: postgres
-      -
-        name: Set up Python 3.8
-        uses: actions/setup-python@v1
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.8
-      -
-        name: Install dependencies
+          python-version: "3.8"
+
+      - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y libmemcached-dev libsasl2-modules
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      -
-        name: Test with pytest
+
+      - name: Test with pytest
         env:
           DJANGO_SETTINGS_MODULE: parladata_project.settings.k8s
         run: |
