--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -1,66 +1,68 @@
+name: Automatic PRs
 on:
   push:
     branches:
-    - dev
-
+      - dev
 jobs:
   pull-requests:
+    name: Automatic PRs
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - name: Check out the repo
+        uses: actions/checkout@v3
 
-    - name: pull-request-k8s
-      uses: repo-sync/pull-request@v2
-      with:
-        destination_branch: "k8s"
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        pr_title: "Pulling ${{ github.ref }} into k8s"
+      - name: pull-request-k8s
+        uses: repo-sync/pull-request@v2
+        with:
+          destination_branch: "k8s"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_title: "Pulling ${{ github.ref }} into k8s"
 
-    - name: pull-request-ajdovscina
-      uses: repo-sync/pull-request@v2
-      with:
-        destination_branch: "ajdovscina"
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        pr_title: "Pulling ${{ github.ref }} into ajdovscina"
+      - name: pull-request-ajdovscina
+        uses: repo-sync/pull-request@v2
+        with:
+          destination_branch: "ajdovscina"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_title: "Pulling ${{ github.ref }} into ajdovscina"
 
-    - name: pull-request-lendava
-      uses: repo-sync/pull-request@v2
-      with:
-        destination_branch: "lendava"
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        pr_title: "Pulling ${{ github.ref }} into lendava"
+      - name: pull-request-lendava
+        uses: repo-sync/pull-request@v2
+        with:
+          destination_branch: "lendava"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_title: "Pulling ${{ github.ref }} into lendava"
 
-    - name: pull-request-hrastnik
-      uses: repo-sync/pull-request@v2
-      with:
-        destination_branch: "hrastnik"
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        pr_title: "Pulling ${{ github.ref }} into hrastnik"
+      - name: pull-request-hrastnik
+        uses: repo-sync/pull-request@v2
+        with:
+          destination_branch: "hrastnik"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_title: "Pulling ${{ github.ref }} into hrastnik"
 
-    - name: pull-request-ua
-      uses: repo-sync/pull-request@v2
-      with:
-        destination_branch: "ua"
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        pr_title: "Pulling ${{ github.ref }} into ua"
+      - name: pull-request-ua
+        uses: repo-sync/pull-request@v2
+        with:
+          destination_branch: "ua"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_title: "Pulling ${{ github.ref }} into ua"
 
-    - name: pull-request-slovenija
-      uses: repo-sync/pull-request@v2
-      with:
-        destination_branch: "slovenija"
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        pr_title: "Pulling ${{ github.ref }} into slovenija"
+      - name: pull-request-slovenija
+        uses: repo-sync/pull-request@v2
+        with:
+          destination_branch: "slovenija"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_title: "Pulling ${{ github.ref }} into slovenija"
 
-    - name: pull-request-bih
-      uses: repo-sync/pull-request@v2
-      with:
-        destination_branch: "bih"
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        pr_title: "Pulling ${{ github.ref }} into bih"
+      - name: pull-request-bih
+        uses: repo-sync/pull-request@v2
+        with:
+          destination_branch: "bih"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_title: "Pulling ${{ github.ref }} into bih"
 
-    - name: pull-request-hrvaska
-      uses: repo-sync/pull-request@v2
-      with:
-        destination_branch: "hrvaska"
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        pr_title: "Pulling ${{ github.ref }} into hrvaska"
+      - name: pull-request-hrvaska
+        uses: repo-sync/pull-request@v2
+        with:
+          destination_branch: "hrvaska"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_title: "Pulling ${{ github.ref }} into hrvaska"
