--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,6 +11,9 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v3
 
+      - name: Unzip models
+        run: unzip -o tagger/model.zip -d tagger/
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
