--- a/kustomize/ingress.yaml
+++ b/kustomize/ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: parladata
   annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-sandbox"
+    cert-manager.io/cluster-issuer: "letsencrypt-production"
     nginx.ingress.kubernetes.io/proxy-body-size: 10m
 spec:
   ingressClassName: nginx
@@ -39,7 +39,7 @@ kind: Ingress
 metadata:
   name: parladata-nginx
   annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-sandbox"
+    cert-manager.io/cluster-issuer: "letsencrypt-production"
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
     nginx.ingress.kubernetes.io/cors-allow-origin: "*" # TODO
