--- a/kustomize/secrets.yaml.example
+++ b/kustomize/secrets.yaml.example
@@ -42,5 +42,7 @@ stringData:
   PARLAMETER_MEMCACHED_PASSWORD: ""
   # event registry
   EVENTREGISTRY_API_KEY: ""
+  # reCAPTCHA
+  DRF_RECAPTCHA_SECRET_KEY: ""
 # generate your secret key with
 # python -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())'
