added documentation for recaptcha

--- a/kustomize/secrets.yaml.example
+++ b/kustomize/secrets.yaml.example
@@ -43,6 +43,9 @@ stringData:
   # event registry
   EVENTREGISTRY_API_KEY: ""
   # reCAPTCHA
+  # crete new page and secret key
+  # https://www.google.com/recaptcha/admin/create
   DRF_RECAPTCHA_SECRET_KEY: ""
+  DRF_RECAPTCHA_DOMAIN = "www.google.com"
 # generate your secret key with
 # python -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())'
