--- a/kustomize/secrets.yaml.example
+++ b/kustomize/secrets.yaml.example
@@ -45,7 +45,8 @@ stringData:
   # reCAPTCHA
   # crete new page and secret key
   # https://www.google.com/recaptcha/admin/create
-  DRF_RECAPTCHA_SECRET_KEY: ""
   DRF_RECAPTCHA_DOMAIN = "www.google.com"
+  DRF_RECAPTCHA_SITE_KEY: ""
+  DRF_RECAPTCHA_SECRET_KEY: ""
 # generate your secret key with
 # python -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())'
