ask a member email send localized automatization

--- a/kustomize/secrets.yaml.example
+++ b/kustomize/secrets.yaml.example
@@ -28,6 +28,7 @@ stringData:
   PARLAMETER_SMTP_USER: ""
   PARLAMETER_SMTP_PASSWORD: ""
   PARLAMETER_FROM_EMAIL: ""
+  PARLAMETER_REPLY_TO_EMAIL: ""
   # S3 storage for media files
   PARLAMETER_ENABLE_S3: "yes"
   PARLAMETER_AWS_ACCESS_KEY_ID: ""
