--- a/kustomize/deployment.yaml
+++ b/kustomize/deployment.yaml
@@ -19,7 +19,7 @@ spec:
           emptyDir: {}
       initContainers:
         - name: collectstatic
-          image: parladata
+          image: parladata-medvode
           volumeMounts:
             - name: parladata-shared-storage
               mountPath: /pvc
@@ -44,7 +44,7 @@ spec:
               memory: 200Mi
               cpu: 200m
         - name: migrate
-          image: parladata
+          image: parladata-medvode
           command:
             - python
             - manage.py
@@ -66,7 +66,7 @@ spec:
               cpu: 200m
       containers:
         - name: parladata
-          image: parladata
+          image: parladata-medvode
           volumeMounts:
             - name: parladata-shared-storage
               mountPath: /pvc
@@ -98,7 +98,7 @@ spec:
             - name: DJANGO_STATIC_ROOT
               value: "/pvc/static"
             - name: DJANGO_STATIC_URL_BASE
-              value: "https://files.parladata.lb.djnd.si/static/"
+              value: "https://files.parladata-medvode.lb.djnd.si/static/"
             - name: INSTALATION_NAME
               value: default
           resources:
