--- a/kustomize/ingress.yaml
+++ b/kustomize/ingress.yaml
@@ -9,10 +9,10 @@ spec:
   ingressClassName: nginx
   tls:
     - hosts:
-        - parladata.lb.djnd.si
+        - parladata-medvode.lb.djnd.si
       secretName: parladata-tls
   rules:
-    - host: parladata.lb.djnd.si
+    - host: parladata-medvode.lb.djnd.si
       http:
         paths:
           - path: /
@@ -38,10 +38,10 @@ spec:
   ingressClassName: nginx
   tls:
     - hosts:
-        - files.parladata.lb.djnd.si
+        - files.parladata-medvode.lb.djnd.si
       secretName: parladata-nginx-tls
   rules:
-    - host: files.parladata.lb.djnd.si
+    - host: files.parladata-medvode.lb.djnd.si
       http:
         paths:
           - path: /
