add new medvode domain to ingress

--- a/kustomize/ingress.yaml
+++ b/kustomize/ingress.yaml
@@ -10,9 +10,20 @@ spec:
   tls:
     - hosts:
         - parladata-medvode.lb.djnd.si
+        - data.medvode.parlameter.si
       secretName: parladata-tls
   rules:
     - host: parladata-medvode.lb.djnd.si
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: parladata
+                port:
+                  number: 8000
+    - host: data.medvode.parlameter.si
       http:
         paths:
           - path: /
